@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2021 Contributors to the openHAB project
+ * Copyright (c) 2010-2022 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -13,7 +13,6 @@
 package org.openhab.binding.kodi.internal.protocol;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -857,16 +856,11 @@ public class KodiConnection implements KodiClientSocketEventListener {
     }
 
     private @Nullable String stripImageUrl(String url) {
-        try {
-            // we have to strip ending "/" here because Kodi returns a not valid path and filename
-            // "fanart":"image://http%3a%2f%2fthetvdb.com%2fbanners%2ffanart%2foriginal%2f263365-31.jpg/"
-            // "thumbnail":"image://http%3a%2f%2fthetvdb.com%2fbanners%2fepisodes%2f263365%2f5640869.jpg/"
-            String encodedURL = URLEncoder.encode(stripEnd(url, '/'), StandardCharsets.UTF_8.name());
-            return imageUri.resolve(encodedURL).toString();
-        } catch (UnsupportedEncodingException e) {
-            logger.debug("exception during encoding {}", url, e);
-            return null;
-        }
+        // we have to strip ending "/" here because Kodi returns a not valid path and filename
+        // "fanart":"image://http%3a%2f%2fthetvdb.com%2fbanners%2ffanart%2foriginal%2f263365-31.jpg/"
+        // "thumbnail":"image://http%3a%2f%2fthetvdb.com%2fbanners%2fepisodes%2f263365%2f5640869.jpg/"
+        String encodedURL = URLEncoder.encode(stripEnd(url, '/'), StandardCharsets.UTF_8);
+        return imageUri.resolve(encodedURL).toString();
     }
 
     private String stripEnd(final String str, final char suffix) {
@@ -1325,6 +1319,46 @@ public class KodiConnection implements KodiClientSocketEventListener {
         JsonObject params = new JsonObject();
         params.addProperty("action", action);
         socket.callMethod("Input.ExecuteAction", params);
+    }
+
+    public void inputButtonEvent(String buttonEvent) {
+        logger.debug("inputButtonEvent {}.", buttonEvent);
+
+        String button = buttonEvent;
+        String keymap = "KB";
+        Integer holdtime = null;
+
+        if (buttonEvent.contains(";")) {
+            String[] params = buttonEvent.split(";");
+            switch (params.length) {
+                case 2:
+                    button = params[0];
+                    keymap = params[1];
+                    break;
+                case 3:
+                    button = params[0];
+                    keymap = params[1];
+                    try {
+                        holdtime = Integer.parseInt(params[2]);
+                    } catch (NumberFormatException nfe) {
+                        holdtime = null;
+                    }
+                    break;
+            }
+        }
+
+        this.inputButtonEvent(button, keymap, holdtime);
+    }
+
+    private void inputButtonEvent(String button, String keymap, Integer holdtime) {
+        JsonObject params = new JsonObject();
+        params.addProperty("button", button);
+        params.addProperty("keymap", keymap);
+        if (holdtime != null) {
+            params.addProperty("holdtime", holdtime.intValue());
+        }
+        JsonElement result = socket.callMethod("Input.ButtonEvent", params);
+        logger.debug("inputButtonEvent result {}.", result);
     }
 
     public void getSystemProperties() {
